c2prj1_cards/grade.txt
Grading at Tue Mar 31 17:34:44 UTC 2020
Compiling cards.c
In file included from cards.c:2:0:
cards.c: In function ‘card_from_letters’:
cards.c:78:29: error: suggest parentheses around ‘&&’ within ‘||’ [-Werror=parentheses]
          || value_let >= 50 && value_let <= 57
                             ^
cc1: all warnings being treated as errors
Could not compile your card.c!

Overall Grade: FAILED
